k3d/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: devops-toolkit
